# DataStorage

./: CMakeLists.txt  README.md
include/binaryparser/: BinaryParser.h  BinaryParserConfigurator.h
include/common/: Auxiliary.h  Timer.h  os_socket.h
include/datareceiver/: DataReceiver.h  TCPReceiver.h  UDPReceiver.h
include/datastorage/: StorageConverter.h  StorageTask.h
src/: CMakeLists.txt  DataStorage.cpp
src/binaryparser/: BinaryParser.cpp  BinaryParserConfigurator.cpp
src/datareceiver/: TCPReceiver.cpp  UDPReceiver.cpp
src/datastorage/: StorageConverter.cpp  StorageTask.cpp
